--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>SUSIL RESUME | Home :: w3layouts</title>
+<title>SUSIL RESUME</title>
 <!-- Meta tag Keywords -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -551,7 +551,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 				</div>
 				<div class="address-info agileits-info wow fadeInRight animated" data-wow-delay=".6s">
 					<h4>Mail</h4>
-					<a href="C:\Users\susil\Downloads\classic_cv-web_Free04-10-2017_711136290\web\w3layouts-License.txt">Download RESUME</a>
+					<a href="https://s3.ap-south-1.amazonaws.com/resumesusil/T_SUSIL_KUMAR_SYS_ADMIN_LINUX_2.5%2B_YEARS.docx">Download RESUME</a>
 					<p><a href="mailto:tsusil2018@gmail.com">tsusil2018@gmail.com</a></p>
 					<p><a href="mailto:contact@susil.info">contact@susil.info</a></p>
 				</div>
