--- a/test/index.html
+++ b/test/index.html
@@ -288,20 +288,20 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 					<div class="cntl-state">
 						<div class="cntl-content">
 							<h4>2017 Present</h4>
-							<p>SENIOR PROJECT MANAGER</p>
+							<p>Techbical Specialist</p>
 						</div>
 						<div class="cntl-image">
 							<img src="images/w1.jpg" alt=" " class="img-responsive" />
 							<div class="w3ls_cntl_image_pos">
-								<p>Sed do eiusmod tempor incididunt et dolore magna aliqua.</p>
+								<p>NTT DATA</p>
 							</div>
 						</div>
 						<div class="cntl-icon cntl-center">01</div>
 					</div>
 					<div class="cntl-state">
 						<div class="cntl-content">
-							<h4>2013 to 2016</h4>
-							<p>FRONT END DEVELOPER</p>
+							<h4>Dec 2013 to Nov 2014 </h4>
+							<p>Linux System Adminstration </p>
 						</div>
 						<div class="cntl-image w3_cntl_image"><img src="images/w2.jpg" alt=" " class="img-responsive" /></div>
 						<div class="cntl-icon cntl-center">02</div>
